# VEDA_CCTV

./: .gitignore  README.md
server/: Makefile  RtspServerWithCamera.cpp
streamViewer/: CMakeLists.txt  gstthread.cpp  gstthread.h  livewidget.cpp  livewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  playbackwidget.cpp  playbackwidget.h  videowidget.cpp  videowidget.h
